base/istio/kiali.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
    spec:
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v1.77
          command:
            - "/opt/kiali/kiali"
            - "-config"
            - "/kiali-configuration/config.yaml"
          ports:
            - containerPort: 20001
          volumeMounts:
            - name: kiali-config
              mountPath: /kiali-configuration
          readinessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: kiali-config
          configMap:
            name: kiali
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  type: NodePort
  ports:
    - port: 20001
      targetPort: 20001
      nodePort: 30086
      name: http
  selector:
    app: kiali
